src/parser.output
   0  $accept : %entry% $end

   1  program : tdecls lexprs EOF

   2  tdecls :
   3         | tdecls tdecl

   4  tdecl : TYPE NAME ASSIGN type_expr

   5  type_expr : INT
   6            | BOOL
   7            | FLOAT
   8            | STRING
   9            | LPAREN RPAREN
  10            | adt_opt
  11            | LBRACKET struct_decl_body RBRACKET
  12            | type_expr LIST
  13            | type_expr STAR type_expr
  14            | type_expr ARROW type_expr
  15            | type_expr GROUP
  16            | type_expr RING
  17            | type_expr FIELD
  18            | LPAREN type_expr RPAREN

  19  adt_opt : adt_type_expr
  20          | adt_type_expr BAR adt_type_expr

  21  adt_type_expr : NAME
  22                | NAME OF type_name

  23  struct_decl_body : NAME COLON type_name
  24                   | NAME COLON type_name COMMA struct_decl_body

  25  type_name : INT
  26            | BOOL
  27            | FLOAT
  28            | STRING
  29            | NAME
  30            | type_name LIST
  31            | type_name STAR type_name
  32            | type_name ARROW type_name
  33            | type_name GROUP
  34            | type_name RING
  35            | type_name FIELD

  36  lexprs : LET letand_opt lexprs
  37         | LET letand_opt lexpr
  38         | lexpr

  39  lexpr : LET letand_opt IN expr

  40  letand_opt : type_name NAME ASSIGN expr
  41             | type_name NAME ASSIGN expr LAND letand_opt

  42  expr : lexpr
  43       | LITERAL
  44       | FLIT
  45       | BLIT
  46       | STRINGLIT
  47       | LPAREN expr COMMA expr RPAREN
  48       | list_expr
  49       | NAME
  50       | expr binop expr
  51       | MINUS expr
  52       | NOT expr
  53       | FUNCTION fn_def
  54       | expr expr
  55       | IF expr THEN expr ELSE expr
  56       | algebraic_expr
  57       | LBRACE struct_init_body RBRACE
  58       | NAME DOT NAME
  59       | PRINT expr
  60       | target_conc_outer
  61       | LPAREN expr RPAREN

  62  fn_def : formals expr
  63         | formals MATCH formals WITH match

  64  formals : LPAREN formals_opt RPAREN

  65  formals_opt :
  66              | formal_list

  67  formal_list : NAME
  68              | formal_list NAME

  69  match : match_line
  70        | match_line match

  71  match_line : BAR LPAREN pattern RPAREN ARROW expr

  72  pattern : target_wild
  73          | target_wild COMMA pattern

  74  target_wild : ADTNAME
  75              | expr
  76              | ADTNAME LPAREN target_wild RPAREN
  77              | UNDERSCORE

  78  target_conc_outer : ADTNAME
  79                    | ADTNAME LPAREN target_conc_inner RPAREN

  80  target_conc_inner : target_conc_outer
  81                    | ADTNAME LPAREN expr RPAREN

  82  algebraic_expr : GROUP type_name expr expr expr expr
  83                 | RING type_name expr expr expr expr expr expr
  84                 | FIELD type_name expr expr expr expr expr expr expr

  85  struct_init_body : NAME ASSIGN expr
  86                   | NAME ASSIGN expr COMMA struct_init_body

  87  list_expr : LBRACKET inside_list RBRACKET

  88  inside_list :
  89              | expr inside_list

  90  binop : PLUS
  91        | MINUS
  92        | STAR
  93        | DIVIDE
  94        | EQ
  95        | NEQ
  96        | LT
  97        | GT
  98        | LEQ
  99        | GEQ
 100        | AND
 101        | OR

 102  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (102)
	tdecls : .  (2)

	.  reduce 2

	program  goto 3
	tdecls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (102)

	.  reduce 102


state 4
	program : tdecls . lexprs EOF  (1)
	tdecls : tdecls . tdecl  (3)

	LET  shift 5
	TYPE  shift 6
	.  error

	lexprs  goto 7
	tdecl  goto 8
	lexpr  goto 9


state 5
	lexprs : LET . letand_opt lexprs  (36)
	lexprs : LET . letand_opt lexpr  (37)
	lexpr : LET . letand_opt IN expr  (39)

	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	STRING  shift 13
	NAME  shift 14
	.  error

	type_name  goto 15
	letand_opt  goto 16


state 6
	tdecl : TYPE . NAME ASSIGN type_expr  (4)

	NAME  shift 17
	.  error


state 7
	program : tdecls lexprs . EOF  (1)

	EOF  shift 18
	.  error


state 8
	tdecls : tdecls tdecl .  (3)

	.  reduce 3


state 9
	lexprs : lexpr .  (38)

	.  reduce 38


state 10
	type_name : INT .  (25)

	.  reduce 25


state 11
	type_name : BOOL .  (26)

	.  reduce 26


state 12
	type_name : FLOAT .  (27)

	.  reduce 27


state 13
	type_name : STRING .  (28)

	.  reduce 28


state 14
	type_name : NAME .  (29)

	.  reduce 29


state 15
	type_name : type_name . LIST  (30)
	type_name : type_name . STAR type_name  (31)
	type_name : type_name . ARROW type_name  (32)
	type_name : type_name . GROUP  (33)
	type_name : type_name . RING  (34)
	type_name : type_name . FIELD  (35)
	letand_opt : type_name . NAME ASSIGN expr  (40)
	letand_opt : type_name . NAME ASSIGN expr LAND letand_opt  (41)

	STAR  shift 19
	ARROW  shift 20
	GROUP  shift 21
	RING  shift 22
	FIELD  shift 23
	LIST  shift 24
	NAME  shift 25
	.  error


state 16
	lexprs : LET letand_opt . lexprs  (36)
	lexprs : LET letand_opt . lexpr  (37)
	lexpr : LET letand_opt . IN expr  (39)

	LET  shift 5
	IN  shift 26
	.  error

	lexprs  goto 27
	lexpr  goto 28


state 17
	tdecl : TYPE NAME . ASSIGN type_expr  (4)

	ASSIGN  shift 29
	.  error


state 18
	program : tdecls lexprs EOF .  (1)

	.  reduce 1


state 19
	type_name : type_name STAR . type_name  (31)

	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	STRING  shift 13
	NAME  shift 14
	.  error

	type_name  goto 30


state 20
	type_name : type_name ARROW . type_name  (32)

	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	STRING  shift 13
	NAME  shift 14
	.  error

	type_name  goto 31


state 21
	type_name : type_name GROUP .  (33)

	.  reduce 33


state 22
	type_name : type_name RING .  (34)

	.  reduce 34


state 23
	type_name : type_name FIELD .  (35)

	.  reduce 35


state 24
	type_name : type_name LIST .  (30)

	.  reduce 30


state 25
	letand_opt : type_name NAME . ASSIGN expr  (40)
	letand_opt : type_name NAME . ASSIGN expr LAND letand_opt  (41)

	ASSIGN  shift 32
	.  error


state 26
	lexpr : LET letand_opt IN . expr  (39)

	LPAREN  shift 33
	LBRACE  shift 34
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	GROUP  shift 38
	RING  shift 39
	FIELD  shift 40
	LET  shift 41
	IF  shift 42
	PRINT  shift 43
	FUNCTION  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	NAME  shift 47
	ADTNAME  shift 48
	FLIT  shift 49
	STRINGLIT  shift 50
	.  error

	lexpr  goto 51
	expr  goto 52
	list_expr  goto 53
	algebraic_expr  goto 54
	target_conc_outer  goto 55


state 27
	lexprs : LET letand_opt lexprs .  (36)

	.  reduce 36


28: reduce/reduce conflict (reduce 37, reduce 38) on EOF
state 28
	lexprs : LET letand_opt lexpr .  (37)
	lexprs : lexpr .  (38)

	.  reduce 37


state 29
	tdecl : TYPE NAME ASSIGN . type_expr  (4)

	LPAREN  shift 56
	LBRACKET  shift 57
	INT  shift 58
	BOOL  shift 59
	FLOAT  shift 60
	STRING  shift 61
	NAME  shift 62
	.  error

	type_expr  goto 63
	adt_opt  goto 64
	adt_type_expr  goto 65


30: shift/reduce conflict (shift 21, reduce 31) on GROUP
30: shift/reduce conflict (shift 22, reduce 31) on RING
30: shift/reduce conflict (shift 23, reduce 31) on FIELD
30: shift/reduce conflict (shift 24, reduce 31) on LIST
state 30
	type_name : type_name . LIST  (30)
	type_name : type_name . STAR type_name  (31)
	type_name : type_name STAR type_name .  (31)
	type_name : type_name . ARROW type_name  (32)
	type_name : type_name . GROUP  (33)
	type_name : type_name . RING  (34)
	type_name : type_name . FIELD  (35)

	GROUP  shift 21
	RING  shift 22
	FIELD  shift 23
	LIST  shift 24
	LPAREN  reduce 31
	RPAREN  reduce 31
	LBRACE  reduce 31
	LBRACKET  reduce 31
	RBRACKET  reduce 31
	COMMA  reduce 31
	MINUS  reduce 31
	STAR  reduce 31
	ARROW  reduce 31
	NOT  reduce 31
	LET  reduce 31
	IF  reduce 31
	TYPE  reduce 31
	BAR  reduce 31
	PRINT  reduce 31
	FUNCTION  reduce 31
	LITERAL  reduce 31
	BLIT  reduce 31
	NAME  reduce 31
	ADTNAME  reduce 31
	FLIT  reduce 31
	STRINGLIT  reduce 31


31: shift/reduce conflict (shift 21, reduce 32) on GROUP
31: shift/reduce conflict (shift 22, reduce 32) on RING
31: shift/reduce conflict (shift 23, reduce 32) on FIELD
31: shift/reduce conflict (shift 24, reduce 32) on LIST
state 31
	type_name : type_name . LIST  (30)
	type_name : type_name . STAR type_name  (31)
	type_name : type_name . ARROW type_name  (32)
	type_name : type_name ARROW type_name .  (32)
	type_name : type_name . GROUP  (33)
	type_name : type_name . RING  (34)
	type_name : type_name . FIELD  (35)

	STAR  shift 19
	GROUP  shift 21
	RING  shift 22
	FIELD  shift 23
	LIST  shift 24
	LPAREN  reduce 32
	RPAREN  reduce 32
	LBRACE  reduce 32
	LBRACKET  reduce 32
	RBRACKET  reduce 32
	COMMA  reduce 32
	MINUS  reduce 32
	ARROW  reduce 32
	NOT  reduce 32
	LET  reduce 32
	IF  reduce 32
	TYPE  reduce 32
	BAR  reduce 32
	PRINT  reduce 32
	FUNCTION  reduce 32
	LITERAL  reduce 32
	BLIT  reduce 32
	NAME  reduce 32
	ADTNAME  reduce 32
	FLIT  reduce 32
	STRINGLIT  reduce 32


state 32
	letand_opt : type_name NAME ASSIGN . expr  (40)
	letand_opt : type_name NAME ASSIGN . expr LAND letand_opt  (41)

	LPAREN  shift 33
	LBRACE  shift 34
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	GROUP  shift 38
	RING  shift 39
	FIELD  shift 40
	LET  shift 41
	IF  shift 42
	PRINT  shift 43
	FUNCTION  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	NAME  shift 47
	ADTNAME  shift 48
	FLIT  shift 49
	STRINGLIT  shift 50
	.  error

	lexpr  goto 51
	expr  goto 66
	list_expr  goto 53
	algebraic_expr  goto 54
	target_conc_outer  goto 55


state 33
	expr : LPAREN . expr COMMA expr RPAREN  (47)
	expr : LPAREN . expr RPAREN  (61)

	LPAREN  shift 33
	LBRACE  shift 34
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	GROUP  shift 38
	RING  shift 39
	FIELD  shift 40
	LET  shift 41
	IF  shift 42
	PRINT  shift 43
	FUNCTION  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	NAME  shift 47
	ADTNAME  shift 48
	FLIT  shift 49
	STRINGLIT  shift 50
	.  error

	lexpr  goto 51
	expr  goto 67
	list_expr  goto 53
	algebraic_expr  goto 54
	target_conc_outer  goto 55


state 34
	expr : LBRACE . struct_init_body RBRACE  (57)

	NAME  shift 68
	.  error

	struct_init_body  goto 69


state 35
	list_expr : LBRACKET . inside_list RBRACKET  (87)
	inside_list : .  (88)

	LPAREN  shift 33
	LBRACE  shift 34
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	GROUP  shift 38
	RING  shift 39
	FIELD  shift 40
	LET  shift 41
	IF  shift 42
	PRINT  shift 43
	FUNCTION  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	NAME  shift 47
	ADTNAME  shift 48
	FLIT  shift 49
	STRINGLIT  shift 50
	RBRACKET  reduce 88

	lexpr  goto 51
	expr  goto 70
	list_expr  goto 53
	algebraic_expr  goto 54
	target_conc_outer  goto 55
	inside_list  goto 71


state 36
	expr : MINUS . expr  (51)

	LPAREN  shift 33
	LBRACE  shift 34
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	GROUP  shift 38
	RING  shift 39
	FIELD  shift 40
	LET  shift 41
	IF  shift 42
	PRINT  shift 43
	FUNCTION  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	NAME  shift 47
	ADTNAME  shift 48
	FLIT  shift 49
	STRINGLIT  shift 50
	.  error

	lexpr  goto 51
	expr  goto 72
	list_expr  goto 53
	algebraic_expr  goto 54
	target_conc_outer  goto 55


state 37
	expr : NOT . expr  (52)

	LPAREN  shift 33
	LBRACE  shift 34
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	GROUP  shift 38
	RING  shift 39
	FIELD  shift 40
	LET  shift 41
	IF  shift 42
	PRINT  shift 43
	FUNCTION  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	NAME  shift 47
	ADTNAME  shift 48
	FLIT  shift 49
	STRINGLIT  shift 50
	.  error

	lexpr  goto 51
	expr  goto 73
	list_expr  goto 53
	algebraic_expr  goto 54
	target_conc_outer  goto 55


state 38
	algebraic_expr : GROUP . type_name expr expr expr expr  (82)

	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	STRING  shift 13
	NAME  shift 14
	.  error

	type_name  goto 74


state 39
	algebraic_expr : RING . type_name expr expr expr expr expr expr  (83)

	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	STRING  shift 13
	NAME  shift 14
	.  error

	type_name  goto 75


state 40
	algebraic_expr : FIELD . type_name expr expr expr expr expr expr expr  (84)

	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	STRING  shift 13
	NAME  shift 14
	.  error

	type_name  goto 76


state 41
	lexpr : LET . letand_opt IN expr  (39)

	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	STRING  shift 13
	NAME  shift 14
	.  error

	type_name  goto 15
	letand_opt  goto 77


state 42
	expr : IF . expr THEN expr ELSE expr  (55)

	LPAREN  shift 33
	LBRACE  shift 34
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	GROUP  shift 38
	RING  shift 39
	FIELD  shift 40
	LET  shift 41
	IF  shift 42
	PRINT  shift 43
	FUNCTION  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	NAME  shift 47
	ADTNAME  shift 48
	FLIT  shift 49
	STRINGLIT  shift 50
	.  error

	lexpr  goto 51
	expr  goto 78
	list_expr  goto 53
	algebraic_expr  goto 54
	target_conc_outer  goto 55


state 43
	expr : PRINT . expr  (59)

	LPAREN  shift 33
	LBRACE  shift 34
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	GROUP  shift 38
	RING  shift 39
	FIELD  shift 40
	LET  shift 41
	IF  shift 42
	PRINT  shift 43
	FUNCTION  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	NAME  shift 47
	ADTNAME  shift 48
	FLIT  shift 49
	STRINGLIT  shift 50
	.  error

	lexpr  goto 51
	expr  goto 79
	list_expr  goto 53
	algebraic_expr  goto 54
	target_conc_outer  goto 55


state 44
	expr : FUNCTION . fn_def  (53)

	LPAREN  shift 80
	.  error

	fn_def  goto 81
	formals  goto 82


state 45
	expr : LITERAL .  (43)

	.  reduce 43


state 46
	expr : BLIT .  (45)

	.  reduce 45


state 47
	expr : NAME .  (49)
	expr : NAME . DOT NAME  (58)

	DOT  shift 83
	LPAREN  reduce 49
	RPAREN  reduce 49
	LBRACE  reduce 49
	RBRACE  reduce 49
	LBRACKET  reduce 49
	RBRACKET  reduce 49
	COMMA  reduce 49
	PLUS  reduce 49
	MINUS  reduce 49
	STAR  reduce 49
	DIVIDE  reduce 49
	EQ  reduce 49
	NEQ  reduce 49
	LT  reduce 49
	LEQ  reduce 49
	GT  reduce 49
	GEQ  reduce 49
	AND  reduce 49
	OR  reduce 49
	NOT  reduce 49
	GROUP  reduce 49
	RING  reduce 49
	FIELD  reduce 49
	LET  reduce 49
	IN  reduce 49
	LAND  reduce 49
	IF  reduce 49
	THEN  reduce 49
	ELSE  reduce 49
	BAR  reduce 49
	PRINT  reduce 49
	FUNCTION  reduce 49
	LITERAL  reduce 49
	BLIT  reduce 49
	NAME  reduce 49
	ADTNAME  reduce 49
	FLIT  reduce 49
	STRINGLIT  reduce 49
	EOF  reduce 49


48: shift/reduce conflict (shift 84, reduce 78) on LPAREN
state 48
	target_conc_outer : ADTNAME .  (78)
	target_conc_outer : ADTNAME . LPAREN target_conc_inner RPAREN  (79)

	LPAREN  shift 84
	RPAREN  reduce 78
	LBRACE  reduce 78
	RBRACE  reduce 78
	LBRACKET  reduce 78
	RBRACKET  reduce 78
	COMMA  reduce 78
	PLUS  reduce 78
	MINUS  reduce 78
	STAR  reduce 78
	DIVIDE  reduce 78
	EQ  reduce 78
	NEQ  reduce 78
	LT  reduce 78
	LEQ  reduce 78
	GT  reduce 78
	GEQ  reduce 78
	AND  reduce 78
	OR  reduce 78
	NOT  reduce 78
	GROUP  reduce 78
	RING  reduce 78
	FIELD  reduce 78
	LET  reduce 78
	IN  reduce 78
	LAND  reduce 78
	IF  reduce 78
	THEN  reduce 78
	ELSE  reduce 78
	BAR  reduce 78
	PRINT  reduce 78
	FUNCTION  reduce 78
	LITERAL  reduce 78
	BLIT  reduce 78
	NAME  reduce 78
	ADTNAME  reduce 78
	FLIT  reduce 78
	STRINGLIT  reduce 78
	EOF  reduce 78


state 49
	expr : FLIT .  (44)

	.  reduce 44


state 50
	expr : STRINGLIT .  (46)

	.  reduce 46


state 51
	expr : lexpr .  (42)

	.  reduce 42


52: shift/reduce conflict (shift 33, reduce 39) on LPAREN
52: shift/reduce conflict (shift 34, reduce 39) on LBRACE
52: shift/reduce conflict (shift 35, reduce 39) on LBRACKET
52: shift/reduce conflict (shift 38, reduce 39) on GROUP
52: shift/reduce conflict (shift 39, reduce 39) on RING
52: shift/reduce conflict (shift 40, reduce 39) on FIELD
52: shift/reduce conflict (shift 41, reduce 39) on LET
52: shift/reduce conflict (shift 42, reduce 39) on IF
52: shift/reduce conflict (shift 43, reduce 39) on PRINT
52: shift/reduce conflict (shift 44, reduce 39) on FUNCTION
52: shift/reduce conflict (shift 45, reduce 39) on LITERAL
52: shift/reduce conflict (shift 46, reduce 39) on BLIT
52: shift/reduce conflict (shift 47, reduce 39) on NAME
52: shift/reduce conflict (shift 48, reduce 39) on ADTNAME
52: shift/reduce conflict (shift 49, reduce 39) on FLIT
52: shift/reduce conflict (shift 50, reduce 39) on STRINGLIT
state 52
	lexpr : LET letand_opt IN expr .  (39)
	expr : expr . binop expr  (50)
	expr : expr . expr  (54)

	LPAREN  shift 33
	LBRACE  shift 34
	LBRACKET  shift 35
	PLUS  shift 85
	MINUS  shift 86
	STAR  shift 87
	DIVIDE  shift 88
	EQ  shift 89
	NEQ  shift 90
	LT  shift 91
	LEQ  shift 92
	GT  shift 93
	GEQ  shift 94
	AND  shift 95
	OR  shift 96
	NOT  shift 37
	GROUP  shift 38
	RING  shift 39
	FIELD  shift 40
	LET  shift 41
	IF  shift 42
	PRINT  shift 43
	FUNCTION  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	NAME  shift 47
	ADTNAME  shift 48
	FLIT  shift 49
	STRINGLIT  shift 50
	RPAREN  reduce 39
	RBRACE  reduce 39
	RBRACKET  reduce 39
	COMMA  reduce 39
	IN  reduce 39
	LAND  reduce 39
	THEN  reduce 39
	ELSE  reduce 39
	BAR  reduce 39
	EOF  reduce 39

	lexpr  goto 51
	expr  goto 97
	list_expr  goto 53
	binop  goto 98
	algebraic_expr  goto 54
	target_conc_outer  goto 55


state 53
	expr : list_expr .  (48)

	.  reduce 48


state 54
	expr : algebraic_expr .  (56)

	.  reduce 56


state 55
	expr : target_conc_outer .  (60)

	.  reduce 60


state 56
	type_expr : LPAREN . RPAREN  (9)
	type_expr : LPAREN . type_expr RPAREN  (18)

	LPAREN  shift 56
	RPAREN  shift 99
	LBRACKET  shift 57
	INT  shift 58
	BOOL  shift 59
	FLOAT  shift 60
	STRING  shift 61
	NAME  shift 62
	.  error

	type_expr  goto 100
	adt_opt  goto 64
	adt_type_expr  goto 65


state 57
	type_expr : LBRACKET . struct_decl_body RBRACKET  (11)

	NAME  shift 101
	.  error

	struct_decl_body  goto 102


state 58
	type_expr : INT .  (5)

	.  reduce 5


state 59
	type_expr : BOOL .  (6)

	.  reduce 6


state 60
	type_expr : FLOAT .  (7)

	.  reduce 7


state 61
	type_expr : STRING .  (8)

	.  reduce 8


state 62
	adt_type_expr : NAME .  (21)
	adt_type_expr : NAME . OF type_name  (22)

	OF  shift 103
	RPAREN  reduce 21
	STAR  reduce 21
	ARROW  reduce 21
	GROUP  reduce 21
	RING  reduce 21
	FIELD  reduce 21
	LET  reduce 21
	TYPE  reduce 21
	BAR  reduce 21
	LIST  reduce 21


state 63
	tdecl : TYPE NAME ASSIGN type_expr .  (4)
	type_expr : type_expr . LIST  (12)
	type_expr : type_expr . STAR type_expr  (13)
	type_expr : type_expr . ARROW type_expr  (14)
	type_expr : type_expr . GROUP  (15)
	type_expr : type_expr . RING  (16)
	type_expr : type_expr . FIELD  (17)

	STAR  shift 104
	ARROW  shift 105
	GROUP  shift 106
	RING  shift 107
	FIELD  shift 108
	LIST  shift 109
	LET  reduce 4
	TYPE  reduce 4


state 64
	type_expr : adt_opt .  (10)

	.  reduce 10


state 65
	adt_opt : adt_type_expr .  (19)
	adt_opt : adt_type_expr . BAR adt_type_expr  (20)

	BAR  shift 110
	RPAREN  reduce 19
	STAR  reduce 19
	ARROW  reduce 19
	GROUP  reduce 19
	RING  reduce 19
	FIELD  reduce 19
	LET  reduce 19
	TYPE  reduce 19
	LIST  reduce 19


66: shift/reduce conflict (shift 41, reduce 40) on LET
state 66
	letand_opt : type_name NAME ASSIGN expr .  (40)
	letand_opt : type_name NAME ASSIGN expr . LAND letand_opt  (41)
	expr : expr . binop expr  (50)
	expr : expr . expr  (54)

	LPAREN  shift 33
	LBRACE  shift 34
	LBRACKET  shift 35
	PLUS  shift 85
	MINUS  shift 86
	STAR  shift 87
	DIVIDE  shift 88
	EQ  shift 89
	NEQ  shift 90
	LT  shift 91
	LEQ  shift 92
	GT  shift 93
	GEQ  shift 94
	AND  shift 95
	OR  shift 96
	NOT  shift 37
	GROUP  shift 38
	RING  shift 39
	FIELD  shift 40
	LET  shift 41
	LAND  shift 111
	IF  shift 42
	PRINT  shift 43
	FUNCTION  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	NAME  shift 47
	ADTNAME  shift 48
	FLIT  shift 49
	STRINGLIT  shift 50
	IN  reduce 40

	lexpr  goto 51
	expr  goto 97
	list_expr  goto 53
	binop  goto 98
	algebraic_expr  goto 54
	target_conc_outer  goto 55


state 67
	expr : LPAREN expr . COMMA expr RPAREN  (47)
	expr : expr . binop expr  (50)
	expr : expr . expr  (54)
	expr : LPAREN expr . RPAREN  (61)

	LPAREN  shift 33
	RPAREN  shift 112
	LBRACE  shift 34
	LBRACKET  shift 35
	COMMA  shift 113
	PLUS  shift 85
	MINUS  shift 86
	STAR  shift 87
	DIVIDE  shift 88
	EQ  shift 89
	NEQ  shift 90
	LT  shift 91
	LEQ  shift 92
	GT  shift 93
	GEQ  shift 94
	AND  shift 95
	OR  shift 96
	NOT  shift 37
	GROUP  shift 38
	RING  shift 39
	FIELD  shift 40
	LET  shift 41
	IF  shift 42
	PRINT  shift 43
	FUNCTION  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	NAME  shift 47
	ADTNAME  shift 48
	FLIT  shift 49
	STRINGLIT  shift 50
	.  error

	lexpr  goto 51
	expr  goto 97
	list_expr  goto 53
	binop  goto 98
	algebraic_expr  goto 54
	target_conc_outer  goto 55


state 68
	struct_init_body : NAME . ASSIGN expr  (85)
	struct_init_body : NAME . ASSIGN expr COMMA struct_init_body  (86)

	ASSIGN  shift 114
	.  error


state 69
	expr : LBRACE struct_init_body . RBRACE  (57)

	RBRACE  shift 115
	.  error


state 70
	expr : expr . binop expr  (50)
	expr : expr . expr  (54)
	inside_list : expr . inside_list  (89)
	inside_list : .  (88)

	LPAREN  shift 33
	LBRACE  shift 34
	LBRACKET  shift 35
	PLUS  shift 85
	MINUS  shift 86
	STAR  shift 87
	DIVIDE  shift 88
	EQ  shift 89
	NEQ  shift 90
	LT  shift 91
	LEQ  shift 92
	GT  shift 93
	GEQ  shift 94
	AND  shift 95
	OR  shift 96
	NOT  shift 37
	GROUP  shift 38
	RING  shift 39
	FIELD  shift 40
	LET  shift 41
	IF  shift 42
	PRINT  shift 43
	FUNCTION  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	NAME  shift 47
	ADTNAME  shift 48
	FLIT  shift 49
	STRINGLIT  shift 50
	RBRACKET  reduce 88

	lexpr  goto 51
	expr  goto 116
	list_expr  goto 53
	binop  goto 98
	algebraic_expr  goto 54
	target_conc_outer  goto 55
	inside_list  goto 117


state 71
	list_expr : LBRACKET inside_list . RBRACKET  (87)

	RBRACKET  shift 118
	.  error


72: shift/reduce conflict (shift 33, reduce 51) on LPAREN
72: shift/reduce conflict (shift 34, reduce 51) on LBRACE
72: shift/reduce conflict (shift 35, reduce 51) on LBRACKET
72: shift/reduce conflict (shift 38, reduce 51) on GROUP
72: shift/reduce conflict (shift 39, reduce 51) on RING
72: shift/reduce conflict (shift 40, reduce 51) on FIELD
72: shift/reduce conflict (shift 41, reduce 51) on LET
72: shift/reduce conflict (shift 42, reduce 51) on IF
72: shift/reduce conflict (shift 43, reduce 51) on PRINT
72: shift/reduce conflict (shift 44, reduce 51) on FUNCTION
72: shift/reduce conflict (shift 45, reduce 51) on LITERAL
72: shift/reduce conflict (shift 46, reduce 51) on BLIT
72: shift/reduce conflict (shift 47, reduce 51) on NAME
72: shift/reduce conflict (shift 48, reduce 51) on ADTNAME
72: shift/reduce conflict (shift 49, reduce 51) on FLIT
72: shift/reduce conflict (shift 50, reduce 51) on STRINGLIT
state 72
	expr : expr . binop expr  (50)
	expr : MINUS expr .  (51)
	expr : expr . expr  (54)

	LPAREN  shift 33
	LBRACE  shift 34
	LBRACKET  shift 35
	NOT  shift 37
	GROUP  shift 38
	RING  shift 39
	FIELD  shift 40
	LET  shift 41
	IF  shift 42
	PRINT  shift 43
	FUNCTION  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	NAME  shift 47
	ADTNAME  shift 48
	FLIT  shift 49
	STRINGLIT  shift 50
	RPAREN  reduce 51
	RBRACE  reduce 51
	RBRACKET  reduce 51
	COMMA  reduce 51
	PLUS  reduce 51
	MINUS  reduce 51
	STAR  reduce 51
	DIVIDE  reduce 51
	EQ  reduce 51
	NEQ  reduce 51
	LT  reduce 51
	LEQ  reduce 51
	GT  reduce 51
	GEQ  reduce 51
	AND  reduce 51
	OR  reduce 51
	IN  reduce 51
	LAND  reduce 51
	THEN  reduce 51
	ELSE  reduce 51
	BAR  reduce 51
	EOF  reduce 51

	lexpr  goto 51
	expr  goto 97
	list_expr  goto 53
	binop  goto 98
	algebraic_expr  goto 54
	target_conc_outer  goto 55


73: shift/reduce conflict (shift 33, reduce 52) on LPAREN
73: shift/reduce conflict (shift 34, reduce 52) on LBRACE
73: shift/reduce conflict (shift 35, reduce 52) on LBRACKET
73: shift/reduce conflict (shift 38, reduce 52) on GROUP
73: shift/reduce conflict (shift 39, reduce 52) on RING
73: shift/reduce conflict (shift 40, reduce 52) on FIELD
73: shift/reduce conflict (shift 41, reduce 52) on LET
73: shift/reduce conflict (shift 42, reduce 52) on IF
73: shift/reduce conflict (shift 43, reduce 52) on PRINT
73: shift/reduce conflict (shift 44, reduce 52) on FUNCTION
73: shift/reduce conflict (shift 45, reduce 52) on LITERAL
73: shift/reduce conflict (shift 46, reduce 52) on BLIT
73: shift/reduce conflict (shift 47, reduce 52) on NAME
73: shift/reduce conflict (shift 48, reduce 52) on ADTNAME
73: shift/reduce conflict (shift 49, reduce 52) on FLIT
73: shift/reduce conflict (shift 50, reduce 52) on STRINGLIT
state 73
	expr : expr . binop expr  (50)
	expr : NOT expr .  (52)
	expr : expr . expr  (54)

	LPAREN  shift 33
	LBRACE  shift 34
	LBRACKET  shift 35
	NOT  shift 37
	GROUP  shift 38
	RING  shift 39
	FIELD  shift 40
	LET  shift 41
	IF  shift 42
	PRINT  shift 43
	FUNCTION  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	NAME  shift 47
	ADTNAME  shift 48
	FLIT  shift 49
	STRINGLIT  shift 50
	RPAREN  reduce 52
	RBRACE  reduce 52
	RBRACKET  reduce 52
	COMMA  reduce 52
	PLUS  reduce 52
	MINUS  reduce 52
	STAR  reduce 52
	DIVIDE  reduce 52
	EQ  reduce 52
	NEQ  reduce 52
	LT  reduce 52
	LEQ  reduce 52
	GT  reduce 52
	GEQ  reduce 52
	AND  reduce 52
	OR  reduce 52
	IN  reduce 52
	LAND  reduce 52
	THEN  reduce 52
	ELSE  reduce 52
	BAR  reduce 52
	EOF  reduce 52

	lexpr  goto 51
	expr  goto 97
	list_expr  goto 53
	binop  goto 98
	algebraic_expr  goto 54
	target_conc_outer  goto 55


state 74
	type_name : type_name . LIST  (30)
	type_name : type_name . STAR type_name  (31)
	type_name : type_name . ARROW type_name  (32)
	type_name : type_name . GROUP  (33)
	type_name : type_name . RING  (34)
	type_name : type_name . FIELD  (35)
	algebraic_expr : GROUP type_name . expr expr expr expr  (82)
